# toms-lane

./: .gitignore  CMakeLists.txt  README.md  breakout.bat  build.bat  compile-breakout.bat  compile-run-obby.bat  compile.bat  debug-demo.bat  debug-tests.bat  demo.bat  driving.bat  obby-1.bat  obby-2.bat  platform-test.bat  platform.bat  run.bat  sound-test.bat  sprite-editor.bat  test.bat  win32-test.bat  win32.bat
application/: CMakeLists.txt  application.bat
application/src/: sdl2.sh  tl-application.hpp  tl-file.hpp  tl-input.hpp  tl-memory.hpp  tl-window.hpp
application/src/linux/: notes.txt
application/src/sdl2/: CMakeLists.txt  notes.txt  sdl2-application.cpp  sdl2-console.cpp  sdl2-sound.cpp  sdl2-window.cpp
application/src/win32/: win32-application.cpp  win32-application.hpp  win32-input.cpp  win32-input.hpp  win32-time.hpp  win32-window.cpp  win32-window.hpp  win32-winmmsound.cpp
application/src/win32/test/: CMakeLists.txt  win32-file.tests.cpp  win32-input.tests.cpp
blob-game/: main.c  (+1 more)
breakout/: CMakeLists.txt  android.sh  breakout.bat  go.bat  lib.sh  linux.sh  web.sh
breakout/android/: CMakeLists.txt  README.md  breakout-android.cpp
breakout/android/breakout-android/: gradle.properties  settings.gradle.kts
breakout/android/breakout-android/app/: build.gradle.kts
breakout/lib/: CMakeLists.txt  breakout.cpp  breakout.hpp  game.hpp  generated-assets.hpp  levels.cpp  math-functions.cpp  math-functions.hpp  render.cpp  sound.cpp  update.hpp  update_state.cpp
breakout/linux/: CMakeLists.txt  breakout-sdl2.cpp
breakout/src/: CMakeLists.txt  breakout.cpp  game.hpp  levels.cpp  render.cpp  render.hpp  sound.cpp
breakout/web/: CMakeLists.txt  README.md  index.html  main.cpp  main.hpp  software-rendering.hpp  tl-input.hpp  tl-window.cpp  tl-window.hpp
breakout/win32/: CMakeLists.txt  breakout-win32.cpp
demo/: CMakeLists.txt  demo.bat  go.bat  linux.sh  test.sh
demo/lib/: CMakeLists.txt  camera.hpp  demo.cpp  math.hpp  render.cpp  render.hpp
demo/lib/test/: camera.tests.cpp  math.tests.cpp  render.tests.cpp
demo/sdl2/: CMakeLists.txt  demo-sdl2.cpp
demo/src/: CMakeLists.txt  asset.cpp  camera.cpp  camera.hpp  demo-win32.cpp  demo.cpp  generated-assets.hpp  math.cpp  math.hpp  render.cpp  render.hpp
demo/src/test/: CMakeLists.txt  camera.tests.cpp  camera.tests.hpp
demo/win32/: CMakeLists.txt  demo-win32.cpp
obby-1/: .gitignore  CMakeLists.txt  go.bat  lib.sh  linux.sh  win32.bat
obby-1/lib/: CMakeLists.txt  game.hpp  generated-assets.hpp  levels.cpp  obby-1.cpp  obby-1.hpp  render-gamestate.cpp  update-gamestate.cpp
obby-1/linux/: CMakeLists.txt  obby-1-sdl2.cpp
obby-1/src/: game.hpp  levels.cpp  obby-1.cpp  render-gamestate.cpp  update-gamestate.cpp
obby-1/win32/: CMakeLists.txt  obby-1-win32.cpp
obby-2/win32/: CMakeLists.txt  obby-2-win32.cpp
platform/: .gitignore  CMakeLists.txt  go.bat  lib.sh  platform.bat
platform/assets/: font-mono.tlsf
platform/lib/: assert.cpp  assert.hpp  bitmap.cpp  data-structures.hpp  font.cpp  font.hpp  geometry.hpp  math.cpp  memory.hpp  quad-tree.hpp  software-rendering.cpp  software-rendering.hpp  software-rendering.sprite.cpp  software-rendering.sprite.hpp  tl-library.hpp  tl-math-functions.cpp  tl-math-functions.hpp  tl-renderbuffer.hpp  toms-lane-platform.cpp  transform.cpp  transform.hpp  utilities.cpp  utilities.hpp
platform/lib/test/: CMakeLists.txt  bitmap.tests.cpp  collision.tests.cpp  data-structures.tests.cpp  draw-rect.tests.cpp  software-rendering.tests.common.cpp  software-rendering.tests.cpp  software-rendering.tests.draw-line.cpp  software-rendering.tests.sprite.cpp  toms-lane-platform.tests.cpp  utilities.tests.cpp
platform/src/: assert.cpp  assert.hpp  bitmap.cpp  bitmap.hpp  data-structures.hpp  font.cpp  geometry.cpp  quad-tree.hpp  software-rendering.sprite.cpp  tl-library.hpp  toms-lane-platform.cpp  transform.hpp
platform/src/test/: .gitignore  CMakeLists.txt  bitmap.tests.cpp  collision.tests.cpp  generated-test-assets.hpp  math.tests.cpp
sprite-editor/: CMakeLists.txt  go.bat  lib.sh  sprite-editor.bat  win32.bat
sprite-editor/lib/: CMakeLists.txt  commands.cpp  commands.hpp  editor.hpp  palettes.cpp  palettes.hpp  render.cpp  render.hpp  sprite-editor.cpp  state.cpp  transform.cpp  transform.hpp  utilities.cpp  utilities.hpp  utils.cpp  utils.hpp
sprite-editor/lib/test/: CMakeLists.txt  commands.test.cpp  sprite-editor.test.cpp  utils.test.cpp
sprite-editor/src/: commands.cpp  commands.hpp  editor.hpp  palettes.cpp  palettes.hpp  render.cpp  render.hpp  sprite-editor-win32.cpp  sprite-editor.cpp  state.cpp  state.hpp  transform.cpp  transform.hpp
sprite-editor/src/test/: editor.test.cpp  ring-buffer.test.cpp
sprite-editor/win32/: CMakeLists.txt  render.cpp  sprite-editor-win32.cpp
src/application/: CMakeLists.txt  application.bat  tl-input.hpp  tl-memory.hpp  tl-text.hpp  tl-window.hpp
src/application/win32/: file-manifest.txt  win32-application.cpp  win32-application.hpp  win32-console.cpp  win32-file.tests.cpp  win32-input.cpp  win32-input.hpp  win32-input.tests.cpp  win32-memory.cpp  win32-tests.cpp  win32-text.cpp  win32-text.hpp  win32-window.cpp  win32-window.hpp
src/application/win32/test/: win32-input.tests.cpp
src/demo/: CMakeLists.txt  asset.cpp  camera.cpp  camera.hpp  camera.tests.cpp  demo-win32.cpp  demo.bat  demo.cpp  demo.hpp  file.cpp  file.hpp  math.cpp  math.hpp  math.tests.cpp  render.cpp  render.hpp  render.tests.cpp
src/demo/test/: camera.tests.cpp  math.tests.hpp  render.tests.cpp
src/obby-1/: CMakeLists.txt  brick.hpp  checkpoint.sprc  game.hpp  obby-1-win32.cpp  obby-1.bat  obby-1.cpp  render-gamestate.cpp  update-gamestate.cpp
src/obby-2/: CMakeLists.txt  background.cpp  background.sprc  game.hpp  levels.cpp  obby-2-win32.cpp  obby-2.bat  obby-2.cpp  obby2-player.cpp  obby2-player.sprc  platform_common.cpp  render-gamestate.cpp  update-gamestate.cpp
src/platform/test/: CMakeLists.txt  collision.tests.moving-rects.cpp  draw-rect.tests.cpp  geometry.tests.cpp  quad-tree.tests.cpp  transform.tests.cpp
(+223 files in other folders)
